[tool.poetry]
name = "yaml-runner"
version = "0.1.0"
description = "Simple Yaml scripting"
authors = ["Adolfo Gómez García <dkmaster@dkmon.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "yrunner", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.31.0"
PyYAML = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
